# vectormatch-semantic-recs

./: Dockerfile  README.md  main.py  pyproject.toml
sample_data/: query.json
tests/api/: test_search.py
vectormatch/api/: v1.py
vectormatch/pipeline/: query.py
vectormatch/vectorstore/: pg.py
